# python-db-connector

./: .gitignore  README.md  example.ipynb  pyproject.toml  snowflake_connector.py  test.ipynb
db_connector/: __init__.py
