[project]
name = "db-connector"
version = "0.1.0"
description = "\"A reusable Snowflake database connection package\""
authors = [
    {name = "Hongxia.chen",email = "hongxia.chen@adresseavisen.no"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "snowflake-sqlalchemy (>=1.7.3,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "snowflake-connector-python (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
